@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Apr-05-2004 patrickh    Refactored jccl::ConfigManager to reduce public
+                        accessibility of the pending configuration list.
+                        NEW VERSION: 0.17.0
 Mar-19-2004 patrickh    Using a search path to find configuration files is
                         working again for the first time since September 2001.
                         NEW VERSION: 0.16.0
